--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,9 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.9,<3.13"
 pandas = "^2.1.1"
-beautifulsoup4 = "^4.12.2"
 requests = "^2.31.0"
 tqdm = "^4.66.1"
+trafilatura = "^1.6.2"
 
 
 [build-system]
